--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,14 @@
     <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
     <script src='javascripts/bootstrap.min.js' type='text/javascript'></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="http://dimplejs.org/dist/dimple.v2.1.6.min.js"></script>
   </head>
   <body>
+    <div class="chart" id="neighborhood-stats"></div>
 
 
-    <script src='javascripts/d3.min.js' type='text/javascript'></script>
-    <script src='javascripts/dimple.min.js' type='text/javascript'></script>
+    <script src='javascripts/neighborhoodStats.js' type='text/javascript'></script>
+
   </body>
 </html>
