adds serializer on stats

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
   </head>
   <body>
     <div class="chart" id="neighborhood-stats"></div>
-    <div class="chart" id="disposition-category-stats"></div>
+    <div class="chart col-sm-4" id="disp-cat-1"></div>
+    <div class="chart col-sm-4" id="disp-cat-2"></div>
 
 
 
