adds ability to select new neighborhood for chart

--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,14 @@
     <div class="col-sm-4">
       <input class="neigh-inputs" type="text" id="neigh-1" list="neigh-1-list" placeholder="e.g. Gaslamp">
       <datalist class="neigh-dropdown" id="neigh-1-list"></datalist>
+      <button class="neigh-select btn btn-default" target="neigh-1" type="button" name="button">Go</button>
       <div class="chart" id="disp-cat-1"></div>
     </div>
 
     <div class="col-sm-4">
       <input class="neigh-input" type="text" id="neigh-2" list="neigh-2-list" placeholder="e.g. Gaslamp">
       <datalist class="neigh-dropdown" id="neigh-2-list"></datalist>
+      <button class="neigh-select btn btn-default" target="neigh-2" type="button" name="button">Go</button>
       <div class="chart" id="disp-cat-2"></div>
     </div>
 
