--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       <input class="neigh-inputs" type="text" id="neigh-1" list="neigh-1-list" placeholder="e.g. Gaslamp">
       <datalist class="neigh-dropdown" id="neigh-1-list"></datalist>
       <button class="neigh-select btn btn-default" target="neigh-1" type="button" name="button">Go</button>
+      <h4 class="neigh-title">Gaslamp</h4>
       <div class="chart" id="disp-cat-1"></div>
     </div>
 
@@ -25,6 +26,7 @@
       <input class="neigh-input" type="text" id="neigh-2" list="neigh-2-list" placeholder="e.g. Gaslamp">
       <datalist class="neigh-dropdown" id="neigh-2-list"></datalist>
       <button class="neigh-select btn btn-default" target="neigh-2" type="button" name="button">Go</button>
+      <h4 class="neigh-title">La Jolla</h4>
       <div class="chart" id="disp-cat-2"></div>
     </div>
 
