--- a/public/index.html
+++ b/public/index.html
@@ -15,19 +15,23 @@
     <div class="chart" id="neighborhood-stats"></div>
 
     <div class="col-sm-4">
-      <input class="neigh-inputs" type="text" id="neigh-1" list="neigh-1-list" placeholder="e.g. Gaslamp">
-      <datalist class="neigh-dropdown" id="neigh-1-list"></datalist>
-      <button class="neigh-select btn btn-default" target="neigh-1" type="button" name="button">Go</button>
-      <h4 class="neigh-title">Gaslamp</h4>
-      <div class="chart" id="disp-cat-1"></div>
+      <form class="form-inline">
+        <input class="neigh-input form-control" type="text" id="neigh-1" list="neigh-1-list" placeholder="e.g. Gaslamp">
+        <datalist class="neigh-dropdown" id="neigh-1-list"></datalist>
+        <button class="neigh-select btn btn-default" target="neigh-1" type="button" name="button">Go</button>
+        <h4 class="neigh-title">Gaslamp</h4>
+        <div class="chart" id="disp-cat-1"></div>
+      </form>
     </div>
 
     <div class="col-sm-4">
-      <input class="neigh-input" type="text" id="neigh-2" list="neigh-2-list" placeholder="e.g. Gaslamp">
-      <datalist class="neigh-dropdown" id="neigh-2-list"></datalist>
-      <button class="neigh-select btn btn-default" target="neigh-2" type="button" name="button">Go</button>
-      <h4 class="neigh-title">La Jolla</h4>
-      <div class="chart" id="disp-cat-2"></div>
+      <form class="form-inline">
+        <input class="neigh-input form-control" type="text" id="neigh-2" list="neigh-2-list" placeholder="e.g. Gaslamp">
+        <datalist class="neigh-dropdown" id="neigh-2-list"></datalist>
+        <button class="neigh-select btn btn-default" target="neigh-2" type="button" name="button">Go</button>
+        <h4 class="neigh-title">La Jolla</h4>
+        <div class="chart" id="disp-cat-2"></div>
+      </form>
     </div>
 
     <script src='javascripts/neighborhoodStats.js' type='text/javascript'></script>
