adds neigh incidents chart with hard coded params

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div class="chart" id="neighborhood-stats"></div>
+    <div class="chart" id="neigh-incidents-scatter"></div>
 
     <div class="col-sm-4">
       <form class="form-inline">
@@ -36,6 +37,7 @@
 
     <script src='javascripts/neighborhoodStats.js' type='text/javascript'></script>
     <script src='javascripts/dispositionCategoryStats.js' type='text/javascript'></script>
+    <script src='javascripts/neighborhoodIncidents.js' type='text/javascript'></script>
 
   </body>
 </html>
