--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
     <script src='javascripts/bootstrap.min.js' type='text/javascript'></script>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="http://dimplejs.org/dist/dimple.v2.1.6.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.0.0/d3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dimple/2.1.6/dimple.latest.min.js"></script>
   </head>
   <body>
     <div class="chart" id="neighborhood-stats"></div>
