--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,17 @@
   </head>
   <body>
     <div class="chart" id="neighborhood-stats"></div>
-    <div class="chart" id="neigh-incidents-scatter"></div>
+
+
+    <div class="col-sm-12">
+      <form class="form-inline">
+        <input class="neigh-input form-control" type="text" id="neigh-inc" list="neigh-inc-list" placeholder="e.g. Gaslamp">
+        <datalist class="neigh-dropdown" id="neigh-inc-list"></datalist>
+        <button class="neigh-select btn btn-default" target="neigh-inc" type="button" name="button">Go</button>
+        <h4 class="neigh-title">Talmadge</h4>
+        <div class="chart" id="neigh-incidents-scatter"></div>
+      </form>
+    </div>
 
     <div class="col-sm-4">
       <form class="form-inline">
@@ -36,7 +46,7 @@
     </div>
 
     <script src='javascripts/neighborhoodStats.js' type='text/javascript'></script>
-    <script src='javascripts/dispositionCategoryStats.js' type='text/javascript'></script>
+    <script src='javascripts/individualNeighCharts.js' type='text/javascript'></script>
     <script src='javascripts/neighborhoodIncidents.js' type='text/javascript'></script>
 
   </body>
