--- a/public/index.html
+++ b/public/index.html
@@ -6,17 +6,40 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
-    <script src='javascripts/bootstrap.min.js' type='text/javascript'></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="stylesheets/style.css">
+    <link href='./dist/css/typography.css' media='screen' rel='stylesheet' type='text/css'/>
+    <!-- <link href='./dist/css/reset.css' media='screen' rel='stylesheet' type='text/css'/> -->
+    <link href='./dist/css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
     <script src="javascripts/d3.min.js"></script>
     <script src="javascripts/dimple.min.js"></script>
   </head>
-  <body>
+  <body class="swagger-section">
+
+    <div id='header' class="home-header">
+      <div class="swagger-ui-wrap home-title">
+        <span id="logo" class="logo__title">San Diego Police Incidents</span>
+        <form id='api_selector'>
+          <div class='input'><a id="explore" class="header__btn" href="/documentation" data-sw-translate>Explore API</a></div>
+        </form>
+      </div>
+    </div>
+
+
+    <div class="tab-container">
+      <h4 class='tab active-tab' id="current-tab" target="current">Current Week</h5>
+      <h4 class="tab" id="next-tab" target="next">Next Week</h5>
+      <h4 class="tab" id="next-tab" target="next">another Week</h5>
+
+    </div>
+
     <div class="chart" id="neighborhood-stats"></div>
 
-    <div class="col-sm-4">
+    <div class="col-md-5">
       <form class="form-inline">
-        <input class="neigh-input form-control" type="text" id="neigh-1" list="neigh-1-list" placeholder="e.g. Gaslamp">
+        <input class="neigh-input form-control" type="text" id="neigh-1" list="neigh-1-list" placeholder="neighborhood...">
         <datalist class="neigh-dropdown" id="neigh-1-list"></datalist>
         <button class="neigh-select btn btn-default" target="neigh-1" type="button" name="button">Go</button>
         <h4 class="neigh-title">Gaslamp</h4>
@@ -24,9 +47,9 @@
       </form>
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-md-6">
       <form class="form-inline">
-        <input class="neigh-input form-control" type="text" id="neigh-2" list="neigh-2-list" placeholder="e.g. Gaslamp">
+        <input class="neigh-input form-control" type="text" id="neigh-2" list="neigh-2-list" placeholder="neighborhood...">
         <datalist class="neigh-dropdown" id="neigh-2-list"></datalist>
         <button class="neigh-select btn btn-default" target="neigh-2" type="button" name="button">Go</button>
         <h4 class="neigh-title">La Jolla</h4>
