--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
 
     <link rel="stylesheet" href="stylesheets/style.css">
     <link href='./dist/css/typography.css' media='screen' rel='stylesheet' type='text/css'/>
-    <!-- <link href='./dist/css/reset.css' media='screen' rel='stylesheet' type='text/css'/> -->
     <link href='./dist/css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
     <script src="javascripts/d3.min.js"></script>
     <script src="javascripts/dimple.min.js"></script>
@@ -39,12 +38,15 @@
 
 
     <div class="chart-section chart-border bubble-chart">
+      <h4>Number of Total Incidents and Arrests for All Neighborhoods</h4>
+      <p>transient-related incidents represented by circle radius</p>
       <div class="large progress"><div>Loading…</div></div>
       <div class="chart" id="neighborhood-stats"></div>
     </div>
 
     <div class="chart-section scatter-chart">
       <div class="col-sm-12 chart-border">
+        <h4>Arrest and Report Incidents for Neighborhood In a Given Month</h4>
         <form class="form-inline">
           <input class="neigh-input form-control" type="text" id="neigh-inc" list="neigh-inc-list" placeholder="neighborhood...">
           <datalist class="neigh-dropdown" id="neigh-inc-list"></datalist>
@@ -57,6 +59,7 @@
 
     <div class="chart-section area-chart active">
       <div class="chart-border">
+        <h4>Distribution of Incident Types for Selected Neighborhoods</h4>
           <form class="form-inline col-sm-5">
             <input class="neigh-input form-control" type="text" id="neigh-1" list="neigh-1-list" placeholder="neighborhood...">
             <datalist class="neigh-dropdown" id="neigh-1-list"></datalist>
@@ -77,6 +80,6 @@
 
 
     </div>
-    <script src='javascripts/tabs.js' type='text/javascript'></script>
+    <script src='javascripts/charts.js' type='text/javascript'></script>
   </body>
 </html>
