adds d3 only with xy

--- a/public/index.html
+++ b/public/index.html
@@ -78,8 +78,12 @@
       </div>
     </div>
 
+    <div class="d3-chart"></div>
+
 
     </div>
     <script src='javascripts/charts.js' type='text/javascript'></script>
+    <script src='javascripts/d3_chart.js' type='text/javascript'></script>
+
   </body>
 </html>
