second d3 chart in progress

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,8 @@
       </div>
     </div>
 
-    <div class="d3-chart"></div>
+    <div class="d3-chart-bubble"></div>
+    <div class="d3-chart-scatter"></div>
 
 
     </div>
