--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,8 @@
 
     <div class="d3-chart-bubble"></div>
     <div class="d3-chart-scatter"></div>
+    <div class="d3-chart-time-scatter"></div>
+
 
 
     </div>
