adds button on documentation page

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 
     <div class="chart-section area-chart active">
       <div class="chart-border">
-        <h4>Distribution of Incident Types for Selected Neighborhoods</h4>
+        <h4>Distribution of Disposition Types for Selected Neighborhoods</h4>
           <form class="form-inline col-sm-5">
             <input class="neigh-input form-control" type="text" id="neigh-1" list="neigh-1-list" placeholder="neighborhood...">
             <datalist class="neigh-dropdown" id="neigh-1-list"></datalist>
