adds single line chart

--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,7 @@
     <div class="d3-chart-bubble"></div>
     <div class="d3-chart-scatter"></div>
     <div class="d3-chart-time-scatter"></div>
+    <div class="d3-chart-line"></div>
 
 
 
