about tab working

--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,8 @@
       <h4 class="tab active-tab" target="area-chart">Compare Neighborhoods</h5>
       <h4 class='tab' target="bubble-chart">All Neighborhoods</h5>
       <h4 class="tab" target="scatter-chart">Neighborhood In Depth</h5>
+      <h4 class="tab" target="about">About</h5>
     </div>
-
 
     <div class="chart-section chart-border bubble-chart">
       <h4>Number of Total Incidents and Arrests for All Neighborhoods</h4>
@@ -75,6 +75,12 @@
             <h4 class="neigh-title">La Jolla</h4>
             <div class="chart" id="disp-cat-2"></div>
           </form>
+      </div>
+    </div>
+
+    <div class="chart-section about">
+      <div class="col-sm-12">
+        <h4>About</h4>
       </div>
     </div>
 
