--- a/public/index.html
+++ b/public/index.html
@@ -86,12 +86,12 @@
         <p>The CSV data required extensive cleaning and normalizing in order to be provided through this API. Data integrity may have suffered as the result of the need to make decisions during the data cleaning process. Examples include: </p>
         <ul>
           <li>There were a significant number of duplicate records for the same incident in the original data source.  All duplicates were removed and the record with the latest timestamp was maintained.</li>
-          <li>The inicidents data source references contained in the other data sources (beats, etc).  The data was normalized to be relational.</li>
-          <li>Many values found in the incidents data did not correspond to data in the related data source.  When there was a considerable number of incident records coded to a value that did not exist on the related data source, this value was added.  For example, beat numbers 100, 200, 300, etc.</li>
+          <li>The incidents data source references contained in the other data sources (beats, etc).  The data was normalized to be relational.</li>
+          <li>Many values found on incident records did not correspond to data in the related data source.  When there was a considerable number of incident records coded to a value that did not exist on the related data source, this value was added.  For example, beat numbers 100, 200, 300, etc.</li>
         </ul>
 
         <h4>Resources</h4>
-        <p>The API is designed to provide developers with the opportunity to search the incidents records along a number of parameters.  Please explore the API documentation for details.  Search parameters can be combined.  For example, a query can search incidents provided on a certain day, within a certain neighborhood, with a specified disposition description (i.e. arrest).</p>
+        <p>The API is designed to provide developers with the opportunity to search the incidents records along a number of parameters.  Please explore the API documentation for details.  Search parameters can be combined.  For example, a query can search incidents that occurred on a certain day, within a certain neighborhood, with a specified disposition description (i.e. arrest).</p>
         <p>A dump file from the Postgres database that serves this API is also provided.</p>
         <form id='api_selector'>
           <div class='input'><a id="explore" class="header__btn" href="/documentation" data-sw-translate>Explore API</a></div>
