--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
         <p>The CSV data required extensive cleaning and normalizing in order to be provided through this API. Data integrity may have suffered as the result of the need to make decisions during the data cleaning process. Examples include: </p>
         <ul>
           <li>There were a significant number of duplicate records for the same incident in the original data source.  All duplicates were removed and the record with the latest timestamp was maintained.</li>
-          <li>The incidents data source references contained in the other data sources (beats, etc).  The data was normalized to be relational.</li>
+          <li>The incidents data file referenced related data contained in the other data files (beats, etc).  The data was normalized to be relational.</li>
           <li>Many values found on incident records did not correspond to data in the related data source.  When there was a considerable number of incident records coded to a value that did not exist on the related data source, this value was added.  For example, beat numbers 100, 200, 300, etc.</li>
         </ul>
 
