adds same coloring for two area charts

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
     <div class="chart-section area-chart">
       <div class="chart-border">
         <h4>Distribution of Disposition Types for Selected Neighborhoods</h4>
-          <form class="form-inline col-sm-5">
+          <form class="form-inline col-sm-5 area-form">
             <input class="neigh-input form-control" type="text" id="neigh-1" list="neigh-1-list" placeholder="neighborhood...">
             <datalist class="neigh-dropdown" id="neigh-1-list"></datalist>
             <button class="neigh-select btn btn-default" target="neigh-1" type="button" name="button">Go</button>
@@ -72,7 +72,7 @@
             <input class="neigh-input form-control" type="text" id="neigh-2" list="neigh-2-list" placeholder="neighborhood...">
             <datalist class="neigh-dropdown" id="neigh-2-list"></datalist>
             <button class="neigh-select btn btn-default" target="neigh-2" type="button" name="button">Go</button>
-            <h4 class="neigh-title">La Jolla</h4>
+            <h4 class="neigh-title neigh-title-2">La Jolla</h4>
             <div class="chart" id="disp-cat-2"></div>
           </form>
       </div>
