--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
 
   <body class="swagger-section">
 
+    <div id="map"></div>
+
     <div id='header' class="home-header">
       <div class="swagger-ui-wrap home-title">
         <span id="logo" class="logo__title">San Diego Police Incidents</span>
@@ -103,6 +105,8 @@
 
 
     </div>
-    <script src='javascripts/charts.js' type='text/javascript'></script>
+    <!-- <script src='javascripts/charts.js' type='text/javascript'></script> -->
+    <script src='javascripts/map.js' type='text/javascript'></script>
+
   </body>
 </html>
