neigh map rendering

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
   <body class="swagger-section">
 
-    <div id="map"></div>
+    <div id="map"><h1>hello</h1></div>
 
     <div id='header' class="home-header">
       <div class="swagger-ui-wrap home-title">
