--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <link href='./dist/css/typography.css' media='screen' rel='stylesheet' type='text/css'/>
     <link href='./dist/css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
-    <script src="javascripts/d3.min.js"></script>
+    <!-- <script src="javascripts/d3.min.js"></script> -->
+    <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
+    <script type="text/javascript" src="http://d3js.org/queue.v1.min.js"></script>
+    <script type="text/javascript" src="http://d3js.org/topojson.v0.min.js"></script>
     <script src="javascripts/dimple.min.js"></script>
   </head>
 
