better color gradient

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
     <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
     <script type="text/javascript" src="http://d3js.org/queue.v1.min.js"></script>
     <script type="text/javascript" src="http://d3js.org/topojson.v0.min.js"></script>
+    <script src="https://d3js.org/d3-color.v1.min.js"></script>
+    <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="javascripts/dimple.min.js"></script>
   </head>
 
