adds responsiveness to tabs so they don't wrap

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>San Diego Police Incident API</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -32,9 +33,9 @@
 
     <div class="tab-container">
       <h4 class="tab active-tab" target="about">About</h5>
-      <h4 class="tab" target="area-chart">Compare Neighborhoods</h5>
-      <h4 class='tab' target="bubble-chart">All Neighborhoods</h5>
-      <h4 class="tab" target="scatter-chart">Neighborhood In Depth</h5>
+      <h4 class="tab" target="area-chart">Compare <span class="hidden-small">Neighborhoods</span></h5>
+      <h4 class='tab' target="bubble-chart">All <span class="hidden-small">Neighborhoods</span></h5>
+      <h4 class="tab" target="scatter-chart"><span class="hidden-small">Neighborhood</span> In Depth</h5>
     </div>
 
     <div class="chart-section chart-border bubble-chart">
