adds responsiveness to header

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="chart-section scatter-chart">
-      <div class="col-sm-12 chart-border">
+      <div class="col-xs-12 chart-border">
         <h4>Arrest and Report Incidents for Neighborhood In a Given Month</h4>
         <form class="form-inline">
           <input class="neigh-input form-control" type="text" id="neigh-inc" list="neigh-inc-list" placeholder="neighborhood...">
@@ -59,9 +59,9 @@
     </div>
 
     <div class="chart-section area-chart">
-      <div class="chart-border">
+      <div class="chart-border col-xs-12">
         <h4>Distribution of Disposition Types for Selected Neighborhoods</h4>
-          <form class="form-inline col-sm-5 area-form">
+          <form class="form-inline col-md-6">
             <input class="neigh-input form-control" type="text" id="neigh-1" list="neigh-1-list" placeholder="neighborhood...">
             <datalist class="neigh-dropdown" id="neigh-1-list"></datalist>
             <button class="neigh-select btn btn-default" target="neigh-1" type="button" name="button">Go</button>
@@ -80,7 +80,7 @@
     </div>
 
     <div class="chart-section about active">
-      <div class="col-sm-12 about-content">
+      <div class="col-xs-12 about-content">
         <h4>Overview</h4>
         <p>This project provides an API for the City Of San Diego Police Incident data provided by the City as CSV files on its <a href="http://data.sandiego.gov/dataset/police-calls-service">open data portal</a>. The data in this API consists of incidents from <strong>January 1, 2015</strong> through <strong>August 8, 2016</strong>.  It will be updated periodically. Sample data visualizations that utilize the data from this API are provided on this page.</p>
         <h4>Note on Data Integrity</h4>
